--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta tags for search engines-->
+    <meta name="description" content="Love Running. Club for runners in Dublin, Irland. Urban running, trail running. Dublin docklands and Phoneix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Irland, Dublin, sport, exercise">
     <title>Love Running</title>
     <!--favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
@@ -12,7 +15,14 @@
 </head>
 
 <body>
+    <!--Header-->
+    <header>Header</header>
 
+    <!--Main Content-->
+    <main>Main Content</main>
+
+    <!--Footer-->
+    <footer>Footer</footer>
 </body>
 
 </html>
