Add font awesome and first footer link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
     <main>Main content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target=""_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+    <!-- Footer -->
+    <script src="https://kit.fontawesome.com/80139c5fe9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
