--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png">
-    <!--Stylesheet-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -26,7 +26,9 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
@@ -38,13 +40,16 @@
 
     <!-- Main content -->
     <main>
+        <!-- Hero section -->
         <section id="hero">
             <div id="cover-text">
                 <h2>Love Running</h2>
                 <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
-          <section id="reasons">
+
+        <!-- Reasons section -->
+        <section id="reasons">
             <h2>Why love running with us?</h2>
             <div id="benefits">
                 <div id="benefits-physical">
@@ -80,8 +85,8 @@
             </div>
         </section>
 
-        <!--Meetup times section -->
-        <sectionid="meetups">
+        <!-- Meetup times section -->
+        <section id="meetups">
             <h2 class="hidden-heading">Meet-up Times</h2>
             <div id="times">
                 <div>
@@ -126,15 +131,31 @@
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target=""_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com/" target=""_blank" rel="noopener" aria-label="visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com/" target=""_blank" rel="noopener" aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com/" target=""_blank" rel="noopener" aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
-    </footer> 
+    </footer>
 
-    <!-- Footer -->
-    <script src="https://kit.fontawesome.com/80139c5fe9.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
